kubernetes/Cloud_native_pizza_store.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: pizza-delivery-deployment
spec:
  selector:
    matchLabels:
      app: pizza-delivery-service
  template:
    metadata:
      annotations:  
        dapr.io/app-id: delivery-service
        dapr.io/app-port: "8080"
        dapr.io/enabled: "true"
        dapr.io/log-level: "debug"
      labels:
        app: pizza-delivery-service
        app.kubernetes.io/name: pizza-delivery-service
        app.kubernetes.io/part-of: pizza-delivery-service
        app.kubernetes.io/version: 0.1.0
    spec:
      containers:
      - name: pizza-delivery-service
        image: salaboy/pizza-delivery:0.1.0
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
        resources:
          limits:
            cpu: "1"
            memory: "2Gi"
          requests:
            cpu: "1"
            memory: "2Gi"
        ports:
        - containerPort: 8080
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: pizza-kitchen-deployment
spec:
  selector:
    matchLabels:
      app: pizza-kitchen-service
  template:
    metadata:
      annotations:  
        dapr.io/app-id: kitchen-service
        dapr.io/app-port: "8080"
        dapr.io/enabled: "true"
        dapr.io/log-level: "debug"
      labels:
        app: pizza-kitchen-service
        app.kubernetes.io/name: pizza-kitchen-service
        app.kubernetes.io/part-of: pizza-kitchen-service
        app.kubernetes.io/version: 0.1.0
    spec:
      containers:
      - name: pizza-kitchen-service
        image: salaboy/pizza-kitchen:0.1.0
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
        resources:
          limits:
            cpu: "1"
            memory: "2Gi"
          requests:
            cpu: "1"
            memory: "2Gi"
        ports:
        - containerPort: 8080
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: pizza-store-deployment
spec:
  selector:
    matchLabels:
      app: pizza-store-service
  template:
    metadata:
      annotations:  
        dapr.io/app-id: pizza-store
        dapr.io/app-port: "8080"
        dapr.io/enabled: "true"
        dapr.io/log-level: "debug"
      labels:
        app: pizza-store-service
        app.kubernetes.io/name: pizza-store-service
        app.kubernetes.io/part-of: pizza-store-service
        app.kubernetes.io/version: 0.1.0
    spec:
      containers:
      - name: pizza-store-service
        image: salaboy/pizza-store:0.1.0
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
        resources:
          limits:
            cpu: "1"
            memory: "2Gi"
          requests:
            cpu: "1"
            memory: "2Gi"
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: pizza-store
spec:
  selector:
    app: pizza-store-service
  ports:
  - port: 80
    targetPort: 8080
---
