kubernetes/apache  airflow.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: airflow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: airflow
  template:
    metadata:
      labels:
        app: airflow
    spec:
      containers:
      - name: airflow
        image: apache/airflow:latest
        ports:
        - containerPort: 8080 # Adjust the port if necessary
---
apiVersion: v1
kind: Service
metadata:
  name: airflow-service
spec:
  selector:
    app: airflow
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080 # Adjust the target port if necessary
