kubernetes/cert_manager.yaml
kubectl create -f - <<EOF
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-testing"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - mikelevan.demo.com
    secretName: mikelevandemo
  rules:
    - host: mikelevan.demo.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: nginxservice
                port:
                  number: 80
EOF

---
kubectl apply -f - <<EOF
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  selector:
    matchLabels:
      app: nginxdeployment
  replicas: 2
  template:
    metadata:
      labels:
        app: nginxdeployment
    spec:
      containers:
      - name: nginxdeployment
        image: nginx:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginxservice
spec:
  selector:
    app: nginxdeployment
  ports:
    - protocol: TCP
      port: 80
  type: NodePort
EOF
