kubernetes/hello-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloweb
  labels:
    app: hello
spec:
  selector:
    matchLabels:
      app: hello
      tier: web
  template:
    metadata:
      labels:
        app: hello
        tier: web
    spec:
      containers:
      - name: hello-app
        image: us-docker.pkg.dev/google-samples/containers/gke/hello-app-tls:1.0
        imagePullPolicy: Always
        ports:
        - containerPort: 8443
        volumeMounts:
          - name: tls
            mountPath: /etc/tls
            readOnly: true
      volumes:
      - name: tls
        secret:
          secretName: yourdomain-tls
# [END gke_manifests_helloweb_deployment_deployment_helloweb2]
---

# Copyright 2021 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# [START gke_manifests_helloweb_ingress_tls_ingress_helloweb]
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: helloweb
  labels:
    app: hello
  annotations:
    kubernetes.io/ingress.allow-http: "false" # disable HTTP
spec:
  tls:
    - secretName: yourdomain-tls
  defaultBackend:
    service:
      name: helloweb-backend
      port:
        number: 443
# [END gke_manifests_helloweb_ingress_tls_ingress_helloweb]
---
# [START gke_manifests_helloweb_ingress_tls_service_helloweb_backend]
apiVersion: v1
kind: Service
metadata:
  name: helloweb-backend
  labels:
    app: hello
  annotations:
    # Use app-protocols annotation with your ports[0].name:
    # - "HTTPS": Encrypts traffic between the load balancer and your app. Your
    #            app does not have to present a valid TLS cert, you can use
    #            self-signed certs as in this hello-app-tls example.
    # - "HTTP2": If the backend app supports http2 (hello-app-tls does), use
    #            this to have the load balancer proxy traffic using http2. This
    #            also incudes the "HTTPS" option implicity and provides TLS
    #            between the load balancer and your app.
    service.alpha.kubernetes.io/app-protocols: '{"helloweb-tls":"HTTPS"}'
spec:
  type: NodePort
  selector:
    app: hello
    tier: web
  ports:
  - name: helloweb-tls # port name must match the value in the annotation
    port: 443
    targetPort: 8443
# [END gke_manifests_helloweb_ingress_tls_service_helloweb_backend]
---
